<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="5dp"



    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/due_date"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvAmountDue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount_due"
        app:layout_constraintTop_toBottomOf="@id/tvDueDate"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/tvPenaltyAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Penalty Amount"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tvpenaltyNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvPenaltyAmount"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:textColor="@color/black"

        android:text="@string/penalty_amount"
      />



</androidx.constraintlayout.widget.ConstraintLayout>