<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
   >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@color/blue"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".RegisterFragment">



        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_ios_24"
            android:background="@null"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tvRegister"
            app:layout_constraintStart_toStartOf="parent"

            android:contentDescription="back button" />


        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:fontFamily="@font/poppinsregular"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/backButton"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:textStyle="bold"

            android:textColor="@color/white"
            />





        <TextView
            android:id="@+id/tvPlease_provide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/please_provide_correct_details"
            app:layout_constraintTop_toBottomOf="@id/tvRegister"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"

            />



        <com.hbb20.CountryCodePicker
            android:id="@+id/countryPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvPlease_provide"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/edt_shape_white"
            app:ccp_showPhoneCode="false"
            app:ccp_showNameCode="false"
            app:ccp_arrowColor="@color/white"
            app:ccp_showArrow="true"
            app:ccp_showFlag="true"
            app:ccp_autoFormatNumber="true"



            />

        <EditText
            android:id="@+id/ed_idNumber"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toEndOf="@id/countryPicker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/countryPicker"
            app:layout_constraintBottom_toBottomOf="@id/countryPicker"
            android:layout_marginStart="30dp"
            android:background="@drawable/edt_shape_white"
            android:textColor="@color/white"
            android:padding="10dp"
            android:focusable="true"
            android:inputType="number"
            android:maxLength="10"

            />




        <TextView
            android:id="@+id/tvSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/surname"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/ed_idNumber"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            />


        <EditText
            android:id="@+id/edSurname"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edt_shape_white"
            android:textColor="@color/white"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="@+id/tvSurname"
            app:layout_constraintTop_toBottomOf="@id/tvSurname"


            />





        <TextView
            android:id="@+id/tvOthersNames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/other_names"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/edSurname"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            />


        <EditText
            android:id="@+id/edOtherNames"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edt_shape_white"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/tvSurname"
            app:layout_constraintTop_toBottomOf="@id/tvOthersNames"
            android:padding="10dp"


            />




        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/email_adress"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/edOtherNames"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            />


        <EditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edt_shape_white"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/tvEmail"
            app:layout_constraintTop_toBottomOf="@id/tvEmail"
            android:padding="10dp"
            android:inputType="textEmailAddress"

            />




        <TextView
            android:id="@+id/tvOptional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/optional"
            android:textColor="@color/yellow"
            app:layout_constraintTop_toBottomOf="@id/edEmail"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"

            />




        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOptional"
            android:buttonTint="@color/white"


            />


        <TextView
            android:id="@+id/tvTerms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/terms"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/checkbox"
            app:layout_constraintTop_toBottomOf="@id/tvOptional"

            app:layout_constraintHorizontal_bias="0.506"
            />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:text="CONTINUE"
            android:textColor="@color/white"
            android:backgroundTint="@color/red"
            android:background="@drawable/btn_2background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTerms" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
